--- a/contact.html
+++ b/contact.html
@@ -19,17 +19,34 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home/About <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>            
           </ul>
         </div>
       </nav>
+
+
+
+
+
+
+
+
     
+
+<!--Sticky footer was added based on what I found on the web, had to pull the html off their page via inspect-->
+      <footer class="footer">
+        <div class="footer navbar-dark bg-primary">
+            <span class="text-muted">&#169;2020 David R Dugle II</span>
+        </div>
+
+  </footer>
+
 </body>
 </html>
