--- a/portfolio.html
+++ b/portfolio.html
@@ -1,35 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <!--Linking to Bootstrap style sheet-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!--add moblie responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
+
 <body>
     <!--We are going to need a Navigation bar across all three pages...Let's do that here-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">David R Dugle II</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>            
-          </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home/About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
         </div>
-      </nav>
-    
+    </nav>
+    <!--looks to me like there is one main row and multiple sub rows below them becasue the background image is covered by a white box-->
+    <main class="container">
+
+        <section class="row">
+            <div class="col-md-8">
+                <h1>Portfolio</h1>
+
+                <section class="row">
+                    <div class="col-md-6">
+                        <img class="img img-thumbnail" src="http://placehold.it/350x350">
+                    </div>
+                    <div class="col-md-6">
+                        <img class="img img-thumbnail" src="http://placehold.it/350x350">
+                    </div>
+                </section>
+                <section class="row">
+                    <div class="col-md-6">
+                        <img class="img img-thumbnail" src="http://placehold.it/350x350">
+                    </div>
+                    <div class="col-md-6">
+                        <img class="img img-thumbnail" src="http://placehold.it/350x350">
+                    </div>
+                </section>
+                <section class="row">
+                    <div class="col-md-6">
+                        <img class="img img-thumbnail" src="http://placehold.it/350x350">
+                    </div>
+                </section>
+            </div>
+
+        </section>
+
+
+
+
+
+    </main>
+
+
+
+
+
+
+
+    <!--Sticky footer was added based on what I found on the web, had to pull the html off their page via inspect-->
+    <footer class="footer">
+        <div class="footer navbar-dark bg-primary">
+            <span class="text-muted">&#169;2020 David R Dugle II</span>
+        </div>
+
+    </footer>
 </body>
+
 </html>
