added alt tags to images, semantic changes for figures on the portfolio page, about me page created.

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,27 +41,27 @@
             <div class="col-md-8">
                 <h1>Portfolio</h1>
 
-                <section class="row">
+                <figure class="row">
                     <div class="col-md-6">
-                        <img class="img img-thumbnail" src="http://placehold.it/350x350">
+                        <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
                     </div>
                     <div class="col-md-6">
-                        <img class="img img-thumbnail" src="http://placehold.it/350x350">
+                        <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
                     </div>
-                </section>
-                <section class="row">
+                </figure>
+                <figure class="row">
                     <div class="col-md-6">
-                        <img class="img img-thumbnail" src="http://placehold.it/350x350">
+                        <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
                     </div>
                     <div class="col-md-6">
-                        <img class="img img-thumbnail" src="http://placehold.it/350x350">
+                        <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
                     </div>
-                </section>
-                <section class="row">
+                </figure>
+                <figure class="row">
                     <div class="col-md-6">
-                        <img class="img img-thumbnail" src="http://placehold.it/350x350">
+                        <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
                     </div>
-                </section>
+                </figure>
             </div>
 
         </section>
