--- a/index.html
+++ b/index.html
@@ -1,45 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David R Dugle II</title>
     <!--Linking to Bootstrap style sheet-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!--add moblie responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
+
 <body>
     <!--We are going to need a Navigation bar across all three pages...Let's do that here-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">David R Dugle II</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home/About <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>            
-          </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home/About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
         </div>
-      </nav>
-    
-    
+    </nav>
+        <!--Let's get the About Me cookin-->
+    <main class="container">
+        <section class="row">
+            <div class="col-md-8">
+                <h1>About Me</h1>
+
+                <figure class="row">
+
+                    <div class="col-md-4">
+                        <img class="img-thumbnail" src="./assets/David.jpg" alt="David Photo">
+                    </div>
+                    <div class="col-md-8 ">
+                        <p>Thank you for visiting my website, I am glad you stopped by. I am just beginning my coding
+                            journey but am eager to build upon my life experience to be a better developer. What's my
+                            background? I am glad you asked...I am an ARMY National Guard veteran and I worked for an
+                            armored car company for
+                            20
+                            years. </p>
+                        <p>I loved working for the armored car company and early on I was recognized as being
+                            tech-savvy. I was one of the first dedicated ATM Messengers for the branch that I worked
+                            for.
+                            Being affiliated with ATMs allowed me to grow rapidly within the company and eventually
+                            becoming
+                            a District Manager. They offered me a lot of opportunities and moved me around many areas;
+                            Indiana, Georgia, Multiple areas of Florida and finally here in North Carolina. </p>
+                        <p> I am really excited for this new adventure and already know that it was a great decision. I
+                            am thankful for all opportunities I have been given and earned in life and want to make the
+                            most of this one.</p>
+                    </div>
+                </figure>
+            </div>
 
 
-<!--Sticky footer was added based on what I found on the web, had to pull the html off their page via inspect-->
-      <footer class="footer">
+
+
+        </section>
+
+
+
+
+
+
+
+    </main>
+
+
+
+    <!--Sticky footer was added based on what I found on the web, had to pull the html off their page via inspect-->
+    <footer class="footer">
         <div class="footer navbar-dark bg-primary">
             <span class="text-muted">&#169;2020 David R Dugle II</span>
         </div>
 
-  </footer>
+    </footer>
 </body>
+
 </html>
