--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <!--Linking to Bootstrap style sheet-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--I need to add a style sheet so that I can have a background image-->
+    <link rel="stylesheet" href="./assets/style.css">
     <!--add moblie responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
@@ -34,42 +36,37 @@
             </ul>
         </div>
     </nav>
-    <!--Time for the contact page-->
-    <main class="container">
-        <form class="form-row">
-            <div class="col-md-8">
-                <h1>Contact</h1>
-                <label for="inputName">Name</label>
-                <input type="name" class="form-control" id="inputName">
 
-            </div>
-            <div class="col-md-8">
-                <label for="inputEmail4">Email</label>
-                <input type="email" class="form-control" id="inputEmail4">
+    <!--Let's set a background image-->
+    <div class="jumbotron big-banner">
 
+        <!--Time for the contact page-->
+        <main class="container">
+            <form class="form-row">
+                <div class="col-md-8 bg-white">
+                    <h1>Contact</h1>
+                    <label for="inputName">Name</label>
+                    <input type="text" class="form-control" id="inputName">
 
-            </div>
-            <div class="col-md-8">
-                <label for="textArea">Message</label><br>
-                <textarea type="textArea" id="textArea" class="form-control" rows="3"></textarea>
+                </div>
+                <div class="col-md-8 bg-white">
+                    <label for="inputEmail4">Email</label>
+                    <input type="email" class="form-control" id="inputEmail4">
 
 
-            </div>
-
-            <div class="col-md-8">
-
-                <button type="submit" class="btn btn-primary">Submit</button>
-
-            </div>
+                </div>
+                <div class="col-md-8 bg-white">
+                    <label for="formGroupExampleInput">Message</label><br>
+                    <input type="text" id="formGroupExampleInput" class="form-control">
 
 
+                </div>
 
+                <div class="col-md-8 bg-white">
 
+                    <button type="submit" class="btn btn-primary">Submit</button>
 
-
-
-
-        </form>
+                </div>
 
 
 
@@ -78,13 +75,23 @@
 
 
 
+            </form>
 
 
 
 
 
-    </main>
 
+
+
+
+
+
+
+
+
+        </main>
+    </div>
 
 
 
@@ -94,12 +101,14 @@
 
 
     <!--Sticky footer was added based on what I found on the web, had to pull the html off their page via inspect-->
-    <footer class="footer">
-        <div class="footer navbar-dark bg-primary">
-            <span class="text-muted">&#169;2020 David R Dugle II</span>
-        </div>
+    <footer class="footer mt-5">
+        <nav class="navbar sticky-bottom navbar-dark bg-primary">
+            <a class="navbar-brand" href="#">&#169;2020 David R Dugle II</a>
+        </nav>
 
     </footer>
+
+
 
 </body>
 
