--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <!--Linking to Bootstrap style sheet-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--I need to add a style sheet so that I can have a background image-->
+    <link rel="stylesheet" href="./assets/style.css">
     <!--add moblie responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--let's put in some fontawesome-->
+    <script src="https://kit.fontawesome.com/9428d002dc.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
+
+
+
     <!--We are going to need a Navigation bar across all three pages...Let's do that here-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">David R Dugle II</a>
@@ -34,42 +42,69 @@
             </ul>
         </div>
     </nav>
+    <!--Let's set a background image-->
+    <div class="jumbotron big-banner">
+
         <!--Let's get the About Me cookin-->
-    <main class="container">
-        <section class="row">
-            <div class="col-md-8">
-                <h1>About Me</h1>
+        <main class="container wrapper-text">
 
-                <figure class="row">
+            <section class="row">
+                <div class="col-md-8 bg-white">
+                    <h1>About Me</h1>
 
-                    <div class="col-md-4">
-                        <img class="img-thumbnail" src="./assets/David.jpg" alt="David Photo">
-                    </div>
-                    <div class="col-md-8 ">
-                        <p>Thank you for visiting my website, I am glad you stopped by. I am just beginning my coding
-                            journey but am eager to build upon my life experience to be a better developer. What's my
-                            background? I am glad you asked...I am an ARMY National Guard veteran and I worked for an
-                            armored car company for
-                            20
-                            years. </p>
-                        <p>I loved working for the armored car company and early on I was recognized as being
-                            tech-savvy. I was one of the first dedicated ATM Messengers for the branch that I worked
-                            for.
-                            Being affiliated with ATMs allowed me to grow rapidly within the company and eventually
-                            becoming
-                            a District Manager. They offered me a lot of opportunities and moved me around many areas;
-                            Indiana, Georgia, Multiple areas of Florida and finally here in North Carolina. </p>
-                        <p> I am really excited for this new adventure and already know that it was a great decision. I
-                            am thankful for all opportunities I have been given and earned in life and want to make the
-                            most of this one.</p>
-                    </div>
-                </figure>
+                    <figure class="row">
+
+                        <div class="col-md-12">
+                            <img class="img-thumbnail float-left mr-2" src="./assets/David.jpg" alt="David Photo">
+
+                            <p>Thank you for visiting my website, I am glad you stopped by. I am just beginning my
+                                coding
+                                journey but am eager to build upon my life experience to be a better developer.
+                                What's
+                                my
+                                background? I am glad you asked...I am a veteran and I worked for
+                                an
+                                armored car company for
+                                20
+                                years. </p>
+                            <p>I loved working for the armored car company and early on I was recognized as being
+                                tech-savvy. I was one of the first dedicated ATM Messengers for the branch that I
+                                worked
+                                for.
+                                Being affiliated with ATMs allowed me to grow rapidly within the company and
+                                eventually
+                                becoming
+                                a District Manager. They offered me a lot of opportunities and moved me around many
+                                areas;
+                                Indiana, Georgia, Multiple areas of Florida and finally here in North Carolina. </p>
+                            <p> I am really excited for this new adventure and already know that it was a great
+                                decision. I
+                                am thankful for all opportunities I have been given and earned in life and want to
+                                make
+                                the
+                                most of this one.</p>
+                        </div>
+                    </figure>
+                </div>
+
+
+
+
+            </section>
+            <div class="row">
+                <div class=" col-md-8">
+                    <h3>Contact Me</h3>
+                    <ul class="list-group">
+                        <li><a href="mailto:david.dugleii@yahoo.com">david.dugleii@yahoo.com</a></li>
+                        <li><a href="https://www.linkedin.com/in/david-dugle-54b16641/" target="blank">LinkedIn</a></li>
+                        <li><i class="fas fa-mobile-alt"></i> 980-777-0729</li>
+                    </ul>
+                </div>
             </div>
 
 
 
 
-        </section>
 
 
 
@@ -77,15 +112,24 @@
 
 
 
-    </main>
+
+
+
+        </main>
+    </div>
 
 
 
     <!--Sticky footer was added based on what I found on the web, had to pull the html off their page via inspect-->
     <footer class="footer">
-        <div class="footer navbar-dark bg-primary">
-            <span class="text-muted">&#169;2020 David R Dugle II</span>
-        </div>
+        <nav class="navbar sticky-bottom navbar-dark bg-primary">
+            <a class="navbar-brand" href="#">&#169;2020 David R Dugle II</a>
+        </nav>
+
+
+
+
+
 
     </footer>
 </body>
