--- a/portfolio.html
+++ b/portfolio.html
@@ -8,9 +8,12 @@
     <!--Linking to Bootstrap style sheet-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--I need to add a style sheet so that I can have a background image-->
+    <link rel="stylesheet" href="./assets/style.css">
     <!--add moblie responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
+
 
 <body>
     <!--We are going to need a Navigation bar across all three pages...Let's do that here-->
@@ -34,57 +37,65 @@
             </ul>
         </div>
     </nav>
-    <!--looks to me like there is one main row and multiple sub rows below them becasue the background image is covered by a white box-->
-    <main class="container">
+    <!--Let's set a background image-->
+    <div class="jumbotron big-banner">
+        <!--looks to me like there is one main row and multiple sub rows below them becasue the background image is covered by a white box-->
+        <main class="container">
 
-        <section class="row">
-            <div class="col-md-8">
-                <h1>Portfolio</h1>
+            <section class="row">
+                <div class="col-md-8 bg-white">
+                    <h1>Portfolio</h1>
 
-                <figure class="row">
-                    <div class="col-md-6">
-                        <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
-                    </div>
-                    <div class="col-md-6">
-                        <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
-                    </div>
-                </figure>
-                <figure class="row">
-                    <div class="col-md-6">
-                        <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
-                    </div>
-                    <div class="col-md-6">
-                        <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
-                    </div>
-                </figure>
-                <figure class="row">
-                    <div class="col-md-6">
-                        <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
-                    </div>
-                </figure>
-            </div>
+                    <figure class="row">
+                        <div class="col-md-6">
+                            <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
+                        </div>
+                        <div class="col-md-6">
+                            <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
+                        </div>
+                    </figure>
+                    <figure class="row">
+                        <div class="col-md-6">
+                            <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
+                        </div>
+                        <div class="col-md-6">
+                            <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
+                        </div>
+                    </figure>
+                    <figure class="row">
+                        <div class="col-md-6">
+                            <img class="img img-thumbnail" src="http://placehold.it/350x350" alt="Placehold image">
+                        </div>
+                    </figure>
+                </div>
 
-        </section>
-
-
-
-
-
-    </main>
+            </section>
 
 
 
 
+
+        </main>
+
+
+
+    </div>
 
 
 
     <!--Sticky footer was added based on what I found on the web, had to pull the html off their page via inspect-->
     <footer class="footer">
-        <div class="footer navbar-dark bg-primary">
-                        <span class="text-muted">&#169;2020 David R Dugle II</span>
-        </div>
+        <nav class="navbar sticky-bottom navbar-dark bg-primary">
+            <a class="navbar-brand" href="#">&#169;2020 David R Dugle II</a>
+        </nav>
+
+
+
+
+
 
     </footer>
 </body>
+
 
 </html>
